--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,20 @@
     <link rel="stylesheet" href="./sass/index.scss" />
   </head>
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
+    <form class="search-form" id="search-form">
+      <input
+        type="text"
+        class="search-query"
+        name="searchQuery"
+        autocomplete="off"
+        placeholder="Search images..."
+      />
+      <button type="submit">Search</button>
+    </form>
+    <div class="gallery">
+      <!-- Картки зображень -->
+    </div>
+    <button type="button" class="load-more">Load more</button>
     <script src="./index.js" type="module"></script>
   </body>
 </html>
